--- a/03. JavaScript Blog/Exercise/views/article/create.hbs
+++ b/03. JavaScript Blog/Exercise/views/article/create.hbs
@@ -1,6 +1,6 @@
 <div class="container body-content span=8 offset=2">
     <div class="well">
-        <form class="form-horizontal" method="POST" action="/article/create">
+        <form class="form-horizontal" enctype="multipart/form-data" method="POST" action="/article/create">
             <fieldset>
                 <legend>New Article</legend>
 
@@ -11,6 +11,7 @@
                                name="title" required>
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label class="col-sm-4 control-label" for="articleContent">Content</label>
                     <div class="col-sm-6">
